DataGrid + remove some old code

--- a/public_html/sampleapp/widget/templates/Main.html
+++ b/public_html/sampleapp/widget/templates/Main.html
@@ -10,7 +10,7 @@
                     <div data-dojo-type="sampleapp/widget/Properties" data-dojo-attach-point="properties"></div>
                 </div>
                 <div data-dojo-type="dijit/layout/ContentPane" title="List" data-dojo-props="selected:false">
-                    <div data-dojo-type="sampleapp/widget/List" data-dojo-attach-point="list"></div>
+                    <div id="fileList" data-dojo-type="sampleapp/widget/List" data-dojo-attach-point="list"></div>
                 </div>
             </div>
         </div>
