--- a/public_html/sampleapp/widget/templates/List.html
+++ b/public_html/sampleapp/widget/templates/List.html
@@ -1,3 +1,3 @@
 <div>
-    <div id="gridDiv" data-dojo-attach-point="grid" data-dojo-type="dojox/grid/DataGrid"></div>
+    <div id="gridDiv"></div>
 </div>
