--- a/public_html/sampleapp/common.css
+++ b/public_html/sampleapp/common.css
@@ -26,5 +26,9 @@ html, body {
    height: 16px;
    text-align: center;
 } 
-
+#dropTarget {
+    width : 100%;
+    height : 100px;
+    border : 3px dashed red;
+}
 
